--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-basic-ssl": "^1.1.0",
-		"@vitejs/plugin-vue": "^4.6.2",
+		"@vitejs/plugin-vue": "^5.0.4",
 		"cssnano": "^6.0.3",
 		"cssnano-preset-advanced": "^6.0.3",
 		"esbuild": "^0.20.1",
@@ -23,7 +23,7 @@
 		"postcss-css-variables": "^0.19.0",
 		"postcss-nested": "^6.0.1",
 		"prism-themes": "github:PrismJS/prism-themes",
-		"vite": "^4.5.2",
+		"vite": "^5.1.3",
 		"vite-plugin-pages": "^0.32.0",
 		"vite-plugin-vue-markdown": "^0.23.8",
 		"vue": "^3.4.19",
@@ -35,6 +35,11 @@
 		},
 		"overrides": {
 			"esbuild": "*"
+		},
+		"peerDependencyRules": {
+			"allowedVersions": {
+				"vite": "^5.0.0"
+			}
 		}
 	}
 }
